--- a/DataAnalysis/Demo.ipynb
+++ b/DataAnalysis/Demo.ipynb
@@ -244,8 +244,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fe102824-8471-4ff5-9511-33203704195d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[7, 9, 11, 13]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1=[1,2,3,4]\n",
+    "l2=[6,7,8,9]\n",
+    "l3=[]\n",
+    "for i in range(len(l1)):\n",
+    "    l3.append(l1[i]+l2[i])\n",
+    "l3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d10c135f-f5eb-4f20-b7df-e7fe753ca7f9",
    "metadata": {},
    "outputs": [],
    "source": []
